# RealWorldTheGame

./: Cargo.toml  README.md  README.org  default.nix  example.player_data.json  example.player_data.toml  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go
cmd/: launcher.go
doc/: Manual.md  Manual.org
game/: game.go  intro.go  market.go
src/: main.rs
src/game/: data.rs  game.rs  intro.rs  market.rs  mod.rs
src/tui/: ui.rs
tui/: tui.go
utils/game/: game.go
utils/ui/: ui.go
utils/ui/doc/: Manual.md
