[package]
name = "rwg"
authors = ["TheLinuxPirate"]
version = "0.0.7"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
rand = "0.8.5"
prettytable-rs = "0.10.0"
ratatui = "0.26.3"
crossterm = "0.27.0"
termimad = "0.29.4"
log = "0.4.21"
