[package]
name = "rwg"
authors = ["TheLinuxPirate"]
description = "Terminal game about NFTs & crypto"
version = "0.0.7"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
ratatui = "0.26.3"
crossterm = "0.27.0"
toml = "0.8.14"
log = "0.4.21"
rand = "0.8.5"
prettytable-rs = "0.10.0"
termimad = "0.29.4"
